--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: sans-serif;
-      background-image: url("/static/img/anziano.jpg");
+      background-image: url("/static/immagini/sfondo.jpg");
       background-size: cover;
       background-position: center 20%;
       background-repeat: no-repeat;
