--- a/templates/dizionario.html
+++ b/templates/dizionario.html
@@ -3,75 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Dizionario Reggiano</title>
+  <meta name="description" content="Dizionario Reggiano: scopri le parole, traduzioni e audio del dialetto reggiano.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background-image: url("/static/img/anziano.jpg");
-      background-size: cover;
-      background-position: center 20%;
-      background-repeat: no-repeat;
-      color: white;
-      position: relative;
-    }
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 0;
-    }
-    main {
-      position: relative;
-      z-index: 1;
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 10px;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    .alfabeto {
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-    .alfabeto a {
-      margin: 0 5px;
-      color: #f0c000;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .alfabeto a:hover {
-      text-decoration: underline;
-    }
-    ul.voci {
-      list-style: none;
-      padding: 0;
-    }
-    ul.voci li {
-      margin-bottom: 1rem;
-      padding: 0.5rem;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 5px;
-    }
-    audio {
-      margin-top: 0.5rem;
-      width: 100%;
-    }
-    a.back {
-      display: block;
-      text-align: center;
-      margin-top: 2rem;
-      color: #f0c000;
-      text-decoration: none;
-    }
-    a.back:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <div class="overlay"></div>
@@ -80,7 +14,7 @@
 
     <div class="alfabeto">
       {% for lettera in "ABCDEFGHIJKLMNOPQRSTUVWXYZ" %}
-        <a href="{{ url_for('dizionario', lettera=lettera) }}">{{ lettera }}</a>
+        <a href="{{ url_for('dizionario', lettera=lettera) }}" title="Voci con {{ lettera }}">{{ lettera }}</a>
       {% endfor %}
     </div>
 
@@ -97,7 +31,7 @@
             <br><em>[Sinonimi: {{ dati.sinonimi }}]</em>
           {% endif %}
           {% if dati.audio %}
-            <audio controls>
+            <audio controls aria-label="Audio per {{ parola }}">
               <source src="{{ url_for('static', filename='audio/' + dati.audio) }}" type="audio/mpeg">
               Il tuo browser non supporta l'audio.
             </audio>
